--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <title>Maria Briceño</title>
     <link rel="canonical" href="https://www.maria-briceno.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;0,800;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;0,800;1,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+        integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
@@ -22,88 +24,246 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between  " i>
-            <a class="navbar-brand" href="#"><img src="img/MARIA-BRICENO-LOGO-1.png" height="40px" width="40px"  class="d-inline-block align-top" alt="Maria Briceño"></a>
-             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#"><img src="img/MARIA-BRICENO-LOGO-1.png" height="40px" width="40px"
+                    class="d-inline-block align-top" alt="Maria Briceño"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-             </button>
-                <div class="collapse navbar-collapse" id="navigation-links">
-                    <ul class="navbar-nav mr-auto">                        
-                        <li class="nav-item"> <a class="nav-link" href="#">Portfolio</a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="#">Blog</a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="#">Contact</a> </li>                        
-                    </ul>                                        
-                </div>
-                <div class="collapse navbar-collapse" id="navigation-social-media">
-                    <ul class="navbar-nav mr-auto">                        
-                        <li class="nav-item"> <a class="nav-link" href=""><i class="fab fa-behance"></i></a>  </li>
-                        <li class="nav-item"> <a class="nav-link" href=""><i class="fab fa-linkedin"></i></a>  </li>
-                        <li class="nav-item"> <a class="nav-link" href=""><i class="fab fa-instagram"></i></a>  </li>      
-                    </ul>
-                </div>
-                
+            </button>
+            <div class="collapse navbar-collapse" id="navigation-links">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"> <a class="nav-link" href="#">Portfolio</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="#">Blog</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="#">Contact</a> </li>
+                </ul>
+            </div>
+            <div class="collapse navbar-collapse" id="navigation-social-media">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"> <a class="nav-link" href=""><i class="fab fa-behance"></i></a> </li>
+                    <li class="nav-item"> <a class="nav-link" href=""><i class="fab fa-linkedin"></i></a> </li>
+                    <li class="nav-item"> <a class="nav-link" href=""><i class="fab fa-instagram"></i></a> </li>
+                </ul>
+            </div>
+
         </nav>
 
     </header>
-    <main class="container-fluid">
+    <main class="container-fluid justify-content-center">
         <ul class="d-flex flex-row justify-content-center align-items-center row " id="hero">
             <li class="col">
                 <h1>MOTION
                     AND GRAPHICS
                     FOR <br> <span>YOUR BUSINESS!</span></h1>
-                <h3>Hello! I'm Maria and I'll help your brand <strong>stand out</strong>  through <strong> well thought Graphic Design and dynamic animations.</strong></h3>
+                <h3>Hello! I'm Maria and I'll help your brand <strong>stand out</strong> through <strong> well thought
+                        Graphic Design and dynamic animations.</strong></h3>
                 <a href="#" id="contact-button">Let's talk!</a>
             </li>
             <li class="col">
                 <img src="img/MARIA-BRICENO-PORTRAIT.png" alt="Maria Briceño">
             </li>
         </ul>
-        <ul >
+        <ul class="d-flex flex-column justify-content-center align-items-center " id="portfolio">
             <li class="container-fluid">
-                <ul class="row">
-                    <li class="col">
+                <div class="row justify-content-between title-section">
+                    <div class="col-md-7">
                         <h4>Latest Projects</h4>
                         <p>Branding, Motion graphics, Social media and more.</p>
-                    </li>
-                    <li class="col">
+                    </div>
+                    <div class="col-md-2 section-button">
                         <a href="#">Visit my Behance</a>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </li>
-            <li class="row">
-                <ul>
-                    <li class="col">
-                        <img src="" alt="">
-                        <div>                           
-                            <a href=""> title of the piece</a>
-                            <a href="">Published this date</a>                           
+            <li class="container-fluid justify-content-center">
+                <div class="row">
+                    <div class="img-portfolio-hover col">
+                        <img src="img/a1145580599725.5ce5ac218a422.jpg" alt="Title of the project">
+                        <div class="portfolio-info">
+                            <a href=""> <i class="fas fa-arrow-alt-circle-right"></i> title of the piece</a>
+                            <a href="">Published this date</a>
                         </div>
-                    </li>
-                    <li class="col">
-                        <img src="" alt="">
-                        <div>                           
-                            <a href=""> title of the piece</a>
-                            <a href="">Published this date</a>                           
+                    </div>
+                    <div class="img-portfolio-hover col">
+                        <img src="img/PORTFOLIO6.jpg" alt="">
+                        <div class="portfolio-info">
+                            <a href=""><i class="fas fa-arrow-alt-circle-right"></i> title of the piece</a>
+                            <a href="">Published this date</a>
                         </div>
-                    </li>
-                    <li class="col">
-                        <img src="" alt="">
-                        <div>                           
-                            <a href=""> title of the piece</a>
-                            <a href="">Published this date</a>                           
+                    </div>
+                    <div class="w-100 d-none d-md-block"></div>
+                    <div class="img-portfolio-hover col">
+                        <img src="img/a1145580599725.5ce5ac218a422.jpg" alt="">
+                        <div class="portfolio-info">
+                            <a href=""><i class="fas fa-arrow-alt-circle-right"></i> title of the piece</a>
+                            <a href="">Published this date</a>
                         </div>
-                    </li>
-                    <li class="col">
-                        <img src="" alt="">
-                        <div>                           
-                            <a href=""> title of the piece</a>
-                            <a href="">Published this date</a>                           
+                    </div>
+                    <div class="img-portfolio-hover col">
+                        <img src="img/a1145580599725.5ce5ac218a422.jpg" alt="">
+                        <div class="portfolio-info">
+                            <a href="#"> <i class="fas fa-arrow-alt-circle-right"></i>title of the piece</a>
+                            <a href="#">Published this date</a>
                         </div>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </li>
         </ul>
+        <ul class="d-flex justify-content-center align-items-center row" id="visual-rest">
+            <li class="col">
+                <div class="d-flex flex-row justify-content-center align-items-center">
+                    <p>
+                        With <strong>good communication</strong> <br> and <strong>logic thinking</strong> all can be
+                        <br> achieved.
+                    </p>
+                </div>
+            </li>
+        </ul>
+        <ul class="d-flex flex-column justify-content-center align-items-center" id="blog-section">
+            <li class="container-fluid">
+                <div class="row justify-content-between title-section title-section">
+                    <div class="col-md-4">
+                        <h4>What's new?</h4>
+                    </div>
+                    <div class="col-md-3 section-button">
+                        <a href="#">Got take a look at our blog!</a>
+                    </div>
+                </div>
+            </li>
+            <li class="d-flex flex-row justify-content-between align-items-center">
+                <div class="card blog-card">
+                    <a href=""><img class="card-img-top" src="img/dfedbb105270129.5f7526302ae01.jpg"
+                            alt="Card image cap"></a>
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">Buenos Aires,Argentina - published by <a
+                                    href="">bsmaria</a> - <a href="">3 mins ago</a> </small></p>
+                        <hr>
+                        <h5 class="card-title card-title-mod"><a href="#"> Card title</a></h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="card-button">Read more</a>
+                    </div>
+                </div>
+                <div class="card blog-card">
+                    <a href=""><img class="card-img-top" src="img/dfedbb105270129.5f7526302ae01.jpg"
+                            alt="Card image cap"></a>
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">Buenos Aires,Argentina - published by <a
+                                    href="">bsmaria</a> - <a href="">3 mins ago</a> </small></p>
+                        <hr>
+                        <h5 class="card-title card-title-mod"> <a href="#"> Card title</a></h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="card-button ">Read more</a>
+                    </div>
+                </div>
+                <div class="card blog-card">
+                    <a href=""><img class="card-img-top" src="img/dfedbb105270129.5f7526302ae01.jpg"
+                            alt="Card image cap"></a>
+                    <div class="card-body">
+                        <p class="card-text "><small class="text-muted">Buenos Aires,Argentina - published by <a
+                                    href="">bsmaria</a> - <a href="">3 mins ago</a> </small></p>
+                        <hr>
+                        <h5 class="card-title card-title-mod"><a href="#"> Card title</a></h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="card-button">Read more</a>
+                    </div>
+                </div>
+            </li>
+        </ul>
+        <ul class="d-flex flex-row align-items-center" id="contact">
+            <li id="contact-form">
+                <form id="myform" action="/">
+                    <h5>Contact Us</h5>
+                    <div class="info">
+                        <input class="name" type="text" name="name" placeholder="Full name" required> <br>
+                        <input type="text" name="name" placeholder="Email" required><br>
+                        <input type="text" name="name" placeholder="Website"><br>
+                    </div>
+                    <p>Message</p>
+                    <div>
+                        <textarea rows="4"></textarea>
+                    </div>
+                    <button type="submit" href="/">Submit</button>
+                </form>
+            </li>
+            <li id="contact-image">
+                <img src="img/IMG_1074-d.jpg" alt="Maria Briceño">
+            </li>
+        </ul>
+
     </main>
+    <footer>
+        <ul>
+            <li>
+                <div>
+                    <ul>
+                        <li>
+                            <img src="img/LOGO COMPLET-09.png" alt="">
+                            <div>
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-twitter"></i></a>
+                                <a href=""><i class="fab fa-behance"></i></a>
+                                <a href=""><i class="fab fa-github"></i></a>
+                                <a href=""><i class="fab fa-linkedin"></i></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <div>
+                                    <h5>Contact</h5>
+                                    <ul>
+                                        <li>
+                                            <i class="fab fa-pinterest"></i>
+                                            <span>location</span>
+                                        </li>
+                                        <li>
+                                            <i class=""></i>
+                                            <span>1127297409</span>
+                                        </li>
+                                        <li>
+                                            <i class=""></i>
+                                            <span>email</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div>
+                                    <h5>Enlaces de interés</h5>
+                                    <ul>
+                                        <li>
+                                            <a href="">Enalce 1</a>
+                                        </li>
+                                        <li>
+                                            <a href="">Enalce 1</a>
+                                        </li>
+                                        <li>
+                                            <a href="">Enalce 1</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div>
+                                    <h5>Follow me on instagram!</h5>
+                                    <ul>
+                                        <li>
+                                            <img src="" alt="">
+                                        </li>
+                                        <li>
+                                            <img src="" alt="">
+                                        </li>
+                                        <li>
+                                            <img src="" alt="">
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#hero"><i class=""></i></a></li>
+        </ul>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
